modernize rails config

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,16 @@
 /tmp
 
 /.idea
+
+/public/assets
+.byebug_history
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
